--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "lint-staged": "^13.2.0"
+    "lint-staged": "^13.2.0",
+    "husky": "^8.0.3"
   }
 }
