--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.14",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.7.3",
-    "prettier": "^3.5.1",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-workspaces": "^0.10.1",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^13.2.0",
-    "husky": "^8.0.3"
+    "prettier": "^3.5.1",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.3"
   }
 }
