--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "jest --runInBand --passWithNoTests --config=./jest.config.js",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "lint": "lint-staged"
+    "lint": "lint-staged",
+    "start": "nodemon src/node/users/app.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
@@ -23,8 +25,13 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^13.2.0",
+    "nodemon": "^3.1.9",
     "prettier": "^3.5.1",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
   }
 }
